deploy: ec25cf23cd950ac61b5b821a67ed4c94d3810783

--- a/tablet-to-hit-shops-soon/index.html
+++ b/tablet-to-hit-shops-soon/index.html
@@ -8,7 +8,7 @@
 announced an upgrade to the N800 Internet tablet, called the N810. I
 suspect its called that because it is more of an incremental upgrade
 than a total visual refresh it was going from an Nokia 770 to N800. Here
-it is:</p><p><a href=http://2.bp.blogspot.com/_4VvLQrhTX4I/RxtiosvqOFI/AAAAAAAABMc/vdtUwZ0FeFA/s1600-h/n810gps.jpg><img src=http://2.bp.blogspot.com/_4VvLQrhTX4I/RxtiosvqOFI/AAAAAAAABMc/vdtUwZ0FeFA/s320/n810gps.jpg alt=image></a></p><p>(Picture Courtesy: <a href=http://www.internettablettalk.com/2007/10/17/the-nokia-n810-internet-tablet/>Internet Tablet
+it is:</p><p><a href=../img/07/n810gps.jpg><img src=../img/07/n810gps.jpg alt=image></a></p><p>(Picture Courtesy: <a href=http://www.internettablettalk.com/2007/10/17/the-nokia-n810-internet-tablet/>Internet Tablet
 Talk</a>)</p><p>It sports a nice new hardware keyboard; inbuilt GPS (For satellite
 mapping) and OS 2008 (an upgrade to the operating system it runs). The
 N800 will also benefit from OS 2008, which will include GoogleTalk,
