--- a/threats-to-democracy/index.html
+++ b/threats-to-democracy/index.html
@@ -9,7 +9,7 @@ being banned from filming at certain German military sites because of
 his belief in
 Scientology</a>,
 I was a bit outraged at first, despite my abhorrence of their beliefs,
-which I think are crazy and nonsensical.</p><p><a href=http://en.wikipedia.org/wiki/Image:Scientology_warning_leaflet.jpg><img src=http://2.bp.blogspot.com/_4VvLQrhTX4I/RoDgYqFBZfI/AAAAAAAAAy4/WhYOunewTXY/s320/Scientology_warning_leaflet.jpg alt=image></a></p><blockquote><p>Germany has barred the makers of a movie about a plot to kill Adolf
+which I think are crazy and nonsensical.</p><p><a href=../img/07/Image:Scientology_warning_leaflet.jpg><img src=../img/07/Scientology_warning_leaflet.jpg alt=image></a></p><blockquote><p>Germany has barred the makers of a movie about a plot to kill Adolf
 Hitler from filming at German military sites because its star Tom
 Cruise is a Scientologist, the Defence Ministry said on Monday.
 Cruise, also one of the film&rsquo;s producers, is a member of the Church of
