--- a/few-days-with-nokia-n810/index.html
+++ b/few-days-with-nokia-n810/index.html
@@ -4,10 +4,10 @@
 <a class="color-link nav-link" href=../contact>Contact</a>
 <a class="color-link nav-link" href=../archives/>Archives</a>
 <a class="color-link nav-link" href=../tags/>Tags</a>
-<a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script></footer></nav><div id=content class=content-container><h1 class=post-title>A few days with A Nokia N810</h1><time>January 13, 2008</time><div><p><p><a href=http://3.bp.blogspot.com/_4VvLQrhTX4I/R4qHd3krvrI/AAAAAAAABTQ/EEVzzCX5IGs/s1600-h/HPIM0193.JPG><img src=http://3.bp.blogspot.com/_4VvLQrhTX4I/R4qHd3krvrI/AAAAAAAABTQ/EEVzzCX5IGs/s320/HPIM0193.JPG alt=image></a></p><p><a href=http://www.dueyfinster.com/2007/10/nokia-n810-tablet-to-hit-shops-soon.html>I last discussed the Nokia N810 Internet Tablet in
+<a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script></footer></nav><div id=content class=content-container><h1 class=post-title>A few days with A Nokia N810</h1><time>January 13, 2008</time><div><p><p><a href=../img/08/HPIM0193.JPG><img src=../img/08/HPIM0193.JPG alt=image></a></p><p><a href=../tablet-to-hit-shops-soon>I last discussed the Nokia N810 Internet Tablet in
 October</a>;
 when details were only starting to filter out. It wasn&rsquo;t expected for
-Nokia to introduce an upgrade to the <a href=http://www.dueyfinster.com/2007/02/nokia-n800-review.html>N800 Internet Tablet (which I also
+Nokia to introduce an upgrade to the <a href=../nokia-n800>N800 Internet Tablet (which I also
 reviewed
 here)</a> so
 soon. I certainly don&rsquo;t envy the position of a small team getting the
@@ -32,7 +32,7 @@ screen. The problem you ask? The move (by design; older OS ones were
 fixed) and the keylock made to keep them stable is not functional as I
 believe it could be. Why can&rsquo;t I set an auto screen lock when I flip the
 keyboard back in? That kind of commission is what I&rsquo;d call a &lsquo;schoolboy
-error&rsquo;.</p><p><a href=http://4.bp.blogspot.com/_4VvLQrhTX4I/R4qIGHkrvsI/AAAAAAAABTY/W7lgUeEHphE/s1600-h/HPIM0195.JPG><img src=http://4.bp.blogspot.com/_4VvLQrhTX4I/R4qIGHkrvsI/AAAAAAAABTY/W7lgUeEHphE/s320/HPIM0195.JPG alt=image></a></p><p>Apps make any device
+error&rsquo;.</p><p><a href=../img/08/HPIM0195.JPG><img src=../img/08/HPIM0195.JPG alt=image></a></p><p>Apps make any device
 and the N810 has a few good ones; but nothing totally wow or killer just
 yet. Skype as many people are aware is semi-included in the device
 (after a download) and as of yet unlike its desktop Linux counterpart;
@@ -51,7 +51,7 @@ like that; needless to say its startup time was reduced; battery life
 seems longer; and it feels more responsive on OS 2008.</li></ul><p>So should I buy it?
 If you don&rsquo;t have a N800 I would say definitely go for it; as long as
 you
-think<a href=http://2.bp.blogspot.com/_4VvLQrhTX4I/R4qIVnkrvtI/AAAAAAAABTg/RxlmVSws4JY/s1600-h/HPIM0194.JPG><img src=http://2.bp.blogspot.com/_4VvLQrhTX4I/R4qIVnkrvtI/AAAAAAAABTg/RxlmVSws4JY/s320/HPIM0194.JPG alt=image></a>
+think<a href=../img/08/HPIM0194.JPG><img src=../img/08/HPIM0194.JPG alt=image></a>
 the price is right. As with any tech device; shop around for a bargain
 on the price over Nokia&rsquo;s retail listed price. Who is it aimed at?
 People in college like me who like to keep in touch with friends; read
