--- a/planning-computer-build/index.html
+++ b/planning-computer-build/index.html
@@ -23,6 +23,6 @@ name, Quantity, Unit Price, Delivery Cost, Part Description, Link to
 Manufacturers site and best of all: it&rsquo;s easily modified for other
 items. I coloured it real nice too; so its easy to read and understand.
 I hope it&rsquo;s useful to anyone out there, so I am making it available
-under CC-BY-NC-SA. Here is a screenshot of it:</p><p><a href=http://1.bp.blogspot.com/_4VvLQrhTX4I/Rwvt5cvqN1I/AAAAAAAABIY/L62kInnmE2E/s1600-h/Picture+1.png><img src=http://1.bp.blogspot.com/_4VvLQrhTX4I/Rwvt5cvqN1I/AAAAAAAABIY/L62kInnmE2E/s320/Picture+1.png alt=image></a></p><ul><li>Here is the <a href=http://web.dueyfinster.com-a.googlepages.com/ComputerParts.xlt>Microsoft Excel (97/2000/XP/2003) Template For Computer
+under CC-BY-NC-SA. Here is a screenshot of it:</p><p><a href=../img/07/Picture+1.png><img src=../img/07/Picture+1.png alt=image></a></p><ul><li>Here is the <a href=http://web.dueyfinster.com-a.googlepages.com/ComputerParts.xlt>Microsoft Excel (97/2000/XP/2003) Template For Computer
 Parts</a></li><li>Here is the <a href=http://web.dueyfinster.com-a.googlepages.com/ComputerParts.ots>Open Document Template for Computer
 Parts</a></li></ul></p></div><div class=page-footer><hr class=footer-divider><a class=tag href=../tags/hardware>#hardware</a></div></div><footer class=footer-mobile><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script></footer></body></html>
