deploy: 922aba647799a49ec642a593912df25d83308943

--- a/google-will-organise-your-life/index.html
+++ b/google-will-organise-your-life/index.html
@@ -19,7 +19,7 @@ that mail (with document and video) being attached to the meeting on the
 Calendar, which is in turn archived on your PC in Google Desktop and your
 Gmail Drive. While that is only one scenario, it is very possible. Google have
 already leaked information on their eagerness to hold the entire contents of
-ones&rsquo; hard drive on the internet.</p><p>This of course leads to privacy fears, will the U.S. or Chinese governments
+ones' hard drive on the internet.</p><p>This of course leads to privacy fears, will the U.S. or Chinese governments
 have access to literally anything on your computer? The <a href=http://www.eff.org/>Electronic Frontier
 Foundation</a> is an online rights advocacy group, and they recently
 discouraged people from downloading the latest Google Desktop, due to the fact
