--- a/gutsy-coming-along-update-to-dell/index.html
+++ b/gutsy-coming-along-update-to-dell/index.html
@@ -22,7 +22,7 @@ a file at it that it cannot play in the movie player. The free
 software Gnash replacement for Flash will come as standard and can
 play Youtube Vids.</li><li>Dual Screen Glory - If your like me you have a nice and small
 portable laptop, but that screen just won&rsquo;t do all of the time,
-thats why I personally have a 19&rdquo; to plug my 13&rdquo; MacBook into. With
+thats why I personally have a 19" to plug my 13" MacBook into. With
 Gutsy I should be able to plug and play over DVI.</li></ul><p>These are just some of the features that are being worked on for the
 final release. Probably not all of them on the list will get into Gutsy
 final, but lets hope they do! Gutsy+1 (slated for release April 2008)
