--- a/honda-bros-motorcycle/index.html
+++ b/honda-bros-motorcycle/index.html
@@ -15,7 +15,7 @@ and experience. I posted about my <a href=../2008/09/yamaha-yq-aerox-best-moped-
 YQ50</a>,
 My <a href=../2009/12/yamaha-majesty-400c-review.html>Yamaha YP125
 (Majesty)</a>
-and now it&rsquo;s a Honda BROS&rsquo; turn!</p><img src=http://farm4.static.flickr.com/3657/5717976681_857e637784.jpg alt="Honda Bros"><p>I just also ordered a <a href="http://www.haynes.co.uk/webapp/wcs/stores/servlet/ProductDisplay?catalogId=10001&storeId=10001&productId=13493&langId=-1">Haynes
+and now it&rsquo;s a Honda BROS' turn!</p><img src=http://farm4.static.flickr.com/3657/5717976681_857e637784.jpg alt="Honda Bros"><p>I just also ordered a <a href="http://www.haynes.co.uk/webapp/wcs/stores/servlet/ProductDisplay?catalogId=10001&storeId=10001&productId=13493&langId=-1">Haynes
 Manual</a>
 for the motorcycle and joined <a href=http://www.hawkgtforum.com/>HawkGT
 forums</a>, so I am going to learn a thing or
@@ -42,7 +42,7 @@ better than the scooter. I think it&rsquo;s because it&rsquo;s heavier and has
 better tyres for the frame than a scooter could ever have. The Majesty,
 typical of most scooters, has the engine on the back wheel, whereas the
 Bros, as can be seen in the pictures, has a lot of weight in the centre,
-towards the front. One video review on Youtube says&rsquo; BROS&rsquo; love
+towards the front. One video review on Youtube says' BROS' love
 backroads, it does in fact seem to love nice swishy corners.</p><img src=http://farm3.static.flickr.com/2343/5718550212_fff1d6873d.jpg alt="Honda Bros"><p><strong>Looks</strong><br>Being a naked bike, I felt naked on it a first, like there was very
 little protection from a fall. This can be good and bad. Good in that it
 reminds you that your close to the road, so don&rsquo;t do anything stupid.
