--- a/innovation-right-here-dept-of-education/index.html
+++ b/innovation-right-here-dept-of-education/index.html
@@ -46,6 +46,6 @@ Interfaces? Check, Xerox Palo Alto Research Center (PARC). Not to
 mention the massive contribution by Bell Labs/AT&T to Unix etc. These
 are only ones right off the top of my head. All I can say is I hope 3rd
 Level (as Colleges are known in Ireland) gets their own government
-minister (and department) and is free of this man: <a href="http://en.wikipedia.org/wiki/Batt_O'Keeffe">Batt O&rsquo;
+minister (and department) and is free of this man: <a href="http://en.wikipedia.org/wiki/Batt_O'Keeffe">Batt O'
 Keefe</a> and his 20th century
 <a href=http://www.education.ie/>Department of Education</a>.</p></p></div><div class=page-footer><hr class=footer-divider><a class=tag href=../tags/business>#business</a></div></div><footer class=footer-mobile><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script></footer></body></html>
