--- a/ipad-evolution/index.html
+++ b/ipad-evolution/index.html
@@ -16,7 +16,7 @@ existence is an Indicator of the iPad&rsquo;s future more than the iPhone is.
 Which sounds confusing because the iPhone/iPad are such close relatives
 in software and hardware terms. The iPod when released had laughably
 small (even for 2001) memory and a FireWire port (not common then) to
-being one of the biggest consumer success&rsquo; of all time. It started off
+being one of the biggest consumer success' of all time. It started off
 with low memory, buttons to press, black and white screen to iPod
 Colour/Photo to Nano to iPod Touch born from iPhone. I think the iPad
 will be the rising star and technology will be back-ported from it to
