--- a/iphone-3g-review/index.html
+++ b/iphone-3g-review/index.html
@@ -49,7 +49,7 @@ this good.</p><p><strong>Fingers:</strong><br><a href=http://upload.wikimedia.or
 only your hands is great; lets face it: you cannot forget your hands.
 You can forget a stylus and even the iPhone itself; but those hands are
 sticking with ye!</p><p>**Time: **<br>I use my phone for time; Apple has it displayed elegantly, in the same
-place, almost in all the phones&rsquo; screens. I love this as I can keep
+place, almost in all the phones' screens. I love this as I can keep
 myself aware of what I have to do next&mldr; All in glorious 24hr goodness,
 they way time was meant to be displayed&mldr;</p><p><strong>Lots of apps:</strong><br>The App store grows bigger every day and all those little useful Apps
 are really handy.</p><p>**Quick Interface: **<br>The software interface is very fast at getting you to where you want to
