--- a/kerataconus-me/index.html
+++ b/kerataconus-me/index.html
@@ -20,7 +20,7 @@ world to wear, hard pieces of plastic literally sitting on your eye.
 This is a short term solution however, as my eyes will continue to
 degenerate for the next 20 years or so, then will be most likely
 followed by a Cornea transplant (ie. I recieve some other [usually
-dead!] persons&rsquo; corneas). There is technology being worked on, such as
+dead!] persons' corneas). There is technology being worked on, such as
 slicing the cornea and inserting half a contact lense (literally) in
 each side to prop it up. Most likely I am more fortunate then a person
 diagnosed with it 10 or 20 years ago, as time is on my side. The reason
