--- a/microsoft-settles-with-eolas-over/index.html
+++ b/microsoft-settles-with-eolas-over/index.html
@@ -17,7 +17,7 @@ chief operating officer, Mark Swords, told the New York Times that a
 certain number of Eolas’ shareholders would get US$60 to US$72 per
 share.</p></blockquote><p>I think it is a sign of a deep crisis in the technology industry as a
 whole when companies have to pay out over patents over which the holder
-has no product. With patents there should be a use em&rsquo; or lose em&rsquo;
+has no product. With patents there should be a use em' or lose em'
 theme. My biggest concern now is that I hope Microsoft are not trying to
 validate the patent by paying out and then encouraging Eolas to use it
 against competitors, <a href=http://arstechnica.com/news.ars/post/20060823-7575.html>sort of like the Apple and Creative
