--- a/motorcycle-gps/index.html
+++ b/motorcycle-gps/index.html
@@ -8,7 +8,7 @@
 Motorcycle GPS unit. I thought I&rsquo;d give it a run-down for
 potential buyers on my experience for the first week. Firstly
 I should mention, I&rsquo;ve never owned another Garmin unit, and had
-two mobile GPS&rsquo; units before (one being Nokia N800 with Bluetooth
+two mobile GPS' units before (one being Nokia N800 with Bluetooth
 external GPS and other Apple iPhone 3G). The reason I bring this up
 is that a lot of the reviews I&rsquo;ve seen written compare it to it&rsquo;s
 predecessor, Zumo 550, which obviously I can&rsquo;t do.</p><p><img src=http://ecx.images-amazon.com/images/I/41qNSjQzxiL._SL500_AA300_.jpg alt="Zumo 660 SatNav"></p><h2 id=maps>Maps</h2><p>What good is a GPS without good map quality? Garmin&rsquo;s maps are
@@ -63,7 +63,7 @@ pairing you can dial any number you like. I&rsquo;ve only dialed using the
 inbuilt mic and speaker on the unit while stationary and the quality
 seemed acceptable, but would definitely be more useful if a headset
 was used. No SMS functionality is available which is an Apple limitation,
-disappointing in my opinion (would like to see SMS&rsquo; pop up onscreen!).
+disappointing in my opinion (would like to see SMS' pop up onscreen!).
 You can see compatible phones on Gamin&rsquo;s Bluetooth phone list.</p><h2 id=using-computer-software>Using Computer Software</h2><p>I&rsquo;ve only used BaseCamp and it&rsquo;s poorer cousin RoadTrip on Apple Mac OS X,
 which is the main mapping and routing software (on Windows it&rsquo;s called MapSource).
 I&rsquo;ll start off with the biggest limitation: crappy maps on your computer.
