--- a/review-of-motorola-xoom-wifi/index.html
+++ b/review-of-motorola-xoom-wifi/index.html
@@ -13,7 +13,7 @@ any other tablet. I haven&rsquo;t got the video dock yet, but I ampositiveit&rsq
 a great addition to my big HDTV. The only gripe really is that it doesn&rsquo;t charge through
 usb, which I believe is because it has two batteries. It charges through supplied plug
 insanely fast! It lasts all day and then some with heavy use also. I haven&rsquo;t left the
-thing alone long enough to test the standby time, but I am sure it&rsquo;s good also. The 10.1&rdquo;
+thing alone long enough to test the standby time, but I am sure it&rsquo;s good also. The 10.1"
 screen feels like the &lsquo;right&rsquo; size for a tablet and I&rsquo;ll besurprisedif more
 tablets don&rsquo;t end up adopting a screen size closer to the Xoom&rsquo;s. The heft is a bit much,
 I would like it to be a small bit lighter - but nearly all tablets with proper glass
