--- a/ssh-config/index.html
+++ b/ssh-config/index.html
@@ -23,8 +23,8 @@ rations for any host in the .co.uk set of domains, the following pat-
 tern could be used:</p></blockquote><blockquote><p>Host *.co.uk</p></blockquote><blockquote><p>The following pattern would match any host in the 192.168.0.[0-9] network
 range:</p></blockquote><blockquote><p>Host 192.168.0.?</p></blockquote><blockquote><p>A pattern-list is a comma-separated list of patterns. Patterns within
 pattern-lists may be negated by preceding them with an exclamation mark
-(&rsquo;!'). For example, to allow a key to be used from anywhere within an
-organisation except from the ``dialup&rsquo;&rsquo; pool, the following entry (in
-authorized_keys) could be used:</p></blockquote><blockquote><p>from=&rdquo;!<em>.dialup.example.com,</em>.example.com&rdquo;</p></blockquote><p>So there you have it!</p></p></div><div class=page-footer><hr class=footer-divider><a class=tag href=../tags/terminal>#terminal</a>
+('!'). For example, to allow a key to be used from anywhere within an
+organisation except from the ``dialup'' pool, the following entry (in
+authorized_keys) could be used:</p></blockquote><blockquote><p>from="!<em>.dialup.example.com,</em>.example.com"</p></blockquote><p>So there you have it!</p></p></div><div class=page-footer><hr class=footer-divider><a class=tag href=../tags/terminal>#terminal</a>
 <a class=tag href=../tags/linux>#linux</a>
 <a class=tag href=../tags/secure-shell>#secure-shell</a></div></div><footer class=footer-mobile><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script></footer></body></html>
