--- a/this-post-is-censored-by-irma/index.html
+++ b/this-post-is-censored-by-irma/index.html
@@ -53,6 +53,6 @@ tarnished image on the world stage as a place where misguided efforts
 to protect revenue supersede freedom of communication. We would also
 be strongly considering abandoning our Internet subscription for an
 ISP who doesn&rsquo;t cave to these demands, and we imagine many other
-business&rsquo; will too.<br>Please, make the right choice. The world is watching. Your decision
+business' will too.<br>Please, make the right choice. The world is watching. Your decision
 will have an important impact on the future of the Internet in
 Ireland.</p><p>Yours faithfully,<br>[Footer]</p></blockquote><p>I will posting more on this issue as it happens. Stay Tuned!</p></p></div><div class=page-footer><hr class=footer-divider><a class=tag href=../tags/legal>#legal</a></div></div><footer class=footer-mobile><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script></footer></body></html>
