--- a/will-google-buy-skype/index.html
+++ b/will-google-buy-skype/index.html
@@ -16,7 +16,7 @@ directly with Google Talk. Skype as a company has made a lot of
 mistakes; but they actually produces some of the best technology for p2p
 VOIP out there in the marketplace. Skype is particularly strong in
 redundancy, cost of network operation (since it&rsquo;s p2p every user
-carries&rsquo; each others traffic; most people have no idea of this fact) and
+carries' each others traffic; most people have no idea of this fact) and
 routing around the most draconian network admins out their through their
 routers.</p><p>All of this is a strict propreitary network and is centrally controlled
 at the moment for Ebay. All voice is encrypted accross Skype; but it is
