--- a/bill-gates-lists-vista/index.html
+++ b/bill-gates-lists-vista/index.html
@@ -6,7 +6,7 @@
 <a class="color-link nav-link" href=../tags/>Tags</a>
 <a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>Bill Gates lists Vista 'innovations'</h1><time>May 29, 2007</time><div><p><p>Hard to believe really, Mr.Gates lists Windows Vista &lsquo;innovations&rsquo;. Now
 Apple has been shipping everything he mentions since 2005, and I have
-tried Vista, it doesn&rsquo;t even surpass Apples&rsquo; attempt at the software
+tried Vista, it doesn&rsquo;t even surpass Apples' attempt at the software
 (which should be his aim). Some things have been around for years, but
 it&rsquo;s how well your software can do it is the key. Personally I wouldn&rsquo;t
 tout features that another competitor does better, but thats just me. It
