--- a/internet-tablet/index.html
+++ b/internet-tablet/index.html
@@ -13,7 +13,7 @@ yet, but hopefully it will be here soon. Nokia has promised an upgrade in
 2006, that will include VOIP, such as skype.</p><p>All major formats have good support on the Nokia 770, including:</p><ul><li>Audio: MP3, MPEG4-AAC, WAV, AMR, MP2, [OGG - (With download from Maemo)]</li><li>Image: JPEG, GIF, BMP, TIFF, PNG, Animated GIF format, SVG-tiny, ICO</li><li>Video: MPEG1, MPEG4, Real Video, H.263, AVI, 3GP</li></ul><p>As soon as I took it out of the package, within minutes I was surfing, the
 only delay was trying to find MAC address (as my router uses access control
 list) which I eventually found underneath the battery. I thought this was a
-bit odd as Mac Address&rsquo; are easily attainable when it is connected to a
+bit odd as Mac Address' are easily attainable when it is connected to a
 network, so hopefully Nokia will revise this! The media card is also only
 64mb, which gives a total free of about 108mb space. RS-MMC (The media card it
 uses) only come in prohibitive sizes and are expensive, this will most likely
