--- a/mac-ipod-video-tutorial/index.html
+++ b/mac-ipod-video-tutorial/index.html
@@ -6,7 +6,7 @@
 <a class="color-link nav-link" href=../tags/>Tags</a>
 <a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>Mac iPod Video Tutorial</h1><time>March 11, 2007</time><div><p><p>I recorded a tutorial,
 showing people how to extract YouTube (and other flash based sites
-videos&rsquo;) and get them onto your iPod. It was recorded on my Mac, so
+videos') and get them onto your iPod. It was recorded on my Mac, so
 unfortunately its Mac specific, but really only iSquint program is, so
 if anyone can suggest a replacement on Windows or Linux, I will add it
 to the details of the video. I use Garageband for audio, iMovieHD to
