--- a/thoughts-on-ipv6/index.html
+++ b/thoughts-on-ipv6/index.html
@@ -6,8 +6,8 @@
 <a class="color-link nav-link" href=../tags/>Tags</a>
 <a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>Thoughts on IPv6</h1><time>February 9, 2011</time><div><p><p>A multitude of websites have been reporting the impending doom
 of ipv4 exhaustion, which is going to happen soon. All the top
-level address&rsquo; will be gone, but the regional registries will
-still have stocks of address&rsquo; in to 2011. As a user of ipv6, I
+level address' will be gone, but the regional registries will
+still have stocks of address' in to 2011. As a user of ipv6, I
 thought I could share sone thoughts/insights on the events ahead&mldr;</p><p>Below is a very good video which one of my favourite tech shows,
 <a href=http://hak5.org/>Hak5</a> made with an IPv6 Consultant, Joe Klein.</p><iframe width=560 height=315 src=http://www.youtube.com/embed/cl4cEbPayek frameborder=0 allowfullscreen></iframe><p>My own experience has been straightforward on the set up side
 of things. We had to purchase an Apple Airport Extreme router
@@ -18,7 +18,7 @@ money in keeping these old routers <em>shielded</em> from the ever
 increasing IPv6 enabled websites and services - to the point at
 which a large scale upgrade may well be cheaper, but this is not
 likely to happen in the short term.</p><h2 id=setup-of-ipv6>Setup of IPv6</h2><p><a href=http://farm3.static.flickr.com/2072/2261404319_51bbec44ab.jpg title="Data centers will be one of the first to be all IPv6. (Photo credit: dbarsky)"><img src=../files/2011/02/datacenter.jpg class=right alt="Data Center LAN Cabling"></a>
-The funny thing with IPv6 is that machines self issue address&rsquo; and
+The funny thing with IPv6 is that machines self issue address' and
 can use them locally if you have an IPv6 capable router, defaulting
 to IPv4 when going through your NAT to the Internet. So it&rsquo;s the
 bridge to your ISP is the issue. Where I set it up, my ISP is
