--- a/wiki-goes-live-downtime-and-macbook/index.html
+++ b/wiki-goes-live-downtime-and-macbook/index.html
@@ -7,7 +7,7 @@
 <a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.fa5c2b23e07b5d9bfad267a52b4b24fdb053e6fb7524993383594926a3ac270c.js integrity="sha256-+lwrI+B7XZv60melK0sk/bBT5vt1JJkzg1lJJqOsJww=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>Wiki goes live, downtime and Macbook Back!</h1><time>November 12, 2006</time><div><p><p>I have a <a href=http://en.wikipedia.org/wiki/Wiki title="Wikipedia Article on Wiki">Wiki</a> for messing about! I haven&rsquo;t found a purpose for it<img src=http://wiki.dueyfinster.eu/skins/tango/tango-logo.gif alt="DueyFinsters Logo" title="Duey
 Finsters Logo"> yet, but I&rsquo;d like to have it all set up incase one day I turn
 out to need it (maybe for collaboration or something?). If you have any skill
-at themin&rsquo; <a href=http://www.mediawiki.org title=MediaWiki>MediaWiki</a> (the most popular wiki software, run but
+at themin' <a href=http://www.mediawiki.org title=MediaWiki>MediaWiki</a> (the most popular wiki software, run but
 <a href=http://en.wikipedia.org/wiki/Main_Page>Wikipedia</a>, no less) please, please get in touch! I would do it all myself,
 but my time is constrained at the moment, but I will eventually do it myself I
 suppose ;-)</p><p>Some of you may have noticed downtime lately, that&rsquo;s because of the
