deploy: 8f9a61a9b6205b513cbf8112069921f8ee060fa8

--- a/bbc-to-host-multi-os-debate-my-first/index.html
+++ b/bbc-to-host-multi-os-debate-my-first/index.html
@@ -11,7 +11,7 @@ of the comments are highly in favour of Linux, then Mac and lastly
 Windows. This is part of the BBC&rsquo;s coverage of Windows Vista. My hope
 for the future is that Mac and Linux gain at least 10% each (20% total)
 over the next 5 years of the home desktop market, as this will push
-innovation forward, like AMD and Intel competition.</p><p>I am selling my first item on auction giant Ebay, my <a href="http://cgi.ebay.ie/ws/eBayISAPI.dll?ViewItem&rd=1&item=270082923964&ssPageName=STRK:MESE:IT&ih=017" title="Nokia 770 Ebay auction">Nokia 770 Internet
+innovation forward, like AMD and Intel competition.</p><p>I am selling my first item on auction giant Ebay, my <a href="http://cgi.ebay.ie/ws/eBayISAPI.dll?ViewItem&amp;rd=1&amp;item=270082923964&amp;ssPageName=STRK:MESE:IT&amp;ih=017" title="Nokia 770 Ebay auction">Nokia 770 Internet
 Tablet</a>.
 It has served me well, but I recently got a mail the other day that
 prompted me to sell my 770. It was Nokia: they informed me since I was
