--- a/dell-refunds-me-for-windows/index.html
+++ b/dell-refunds-me-for-windows/index.html
@@ -5,7 +5,7 @@
 <a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.a7205ef73b078c8daed6fe1b0826e8ba229ffabbb69d299d9446cf41f2c7d8aa.js integrity="sha256-pyBe9zsHjI2u1v4bCCbouiKf+ru2nSmdlEbPQfLH2Ko=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>Dell refunds me for Windows!</h1><time>August 21, 2007</time><div><p><p>As many of you know
 I am a <a href=http://www.ubuntu.com/>Linux</a> and
 <a href=http://www.apple.com/mac>Mac</a>
-<a href="http://www.google.ie/search?q=define:aficionado&ie=utf-8&amp;amp;oe=utf-8&aq=t&rls=com.ubuntu:en-US:official&client=firefox-a">aficionado</a>.
+<a href="http://www.google.ie/search?q=define:aficionado&amp;ie=utf-8&amp;amp;oe=utf-8&amp;aq=t&amp;rls=com.ubuntu:en-US:official&amp;client=firefox-a">aficionado</a>.
 For my Linux machines, all of them are <a href=http://www.dell.com/open>Dell</a>.
 I have been always pleased with Dells prices, how their machines work
 with Linux, their customer service and the fact they are made in
