--- a/innovation-right-here-dept-of-education/index.html
+++ b/innovation-right-here-dept-of-education/index.html
@@ -41,7 +41,7 @@ you&mldr; Just in the Tech field alone (which I know most about); research
 is everything. The Internet? Check, American Military Research
 (Arpanet). The Web? Check, CERN Particle Physics Laboratory. Graphical
 Interfaces? Check, Xerox Palo Alto Research Center (PARC). Not to
-mention the massive contribution by Bell Labs/AT&T to Unix etc. These
+mention the massive contribution by Bell Labs/AT&amp;T to Unix etc. These
 are only ones right off the top of my head. All I can say is I hope 3rd
 Level (as Colleges are known in Ireland) gets their own government
 minister (and department) and is free of this man: <a href="http://en.wikipedia.org/wiki/Batt_O'Keeffe">Batt O&rsquo;
