--- a/nuclear-or-nothing/index.html
+++ b/nuclear-or-nothing/index.html
@@ -31,5 +31,5 @@ starting to return to Chernobyl</a>. The Ukraine is commissioning more
 and more nuclear plants, and it was one of the worst affected areas of the
 whole disaster. Nuclear Power : We cannot afford to live without it, even one
 of the founders of Greenpeace, one of the most militant enviromentalist
-groups, now accepts this. The Internet literally <a href="http://www.google.com/trends?q=Nuclear+Power,+Renewable+Energy&ctab=0&geo=all&date=all" title="Nuclear VS. Renewable Energy">buzzes with Nuclear news and
+groups, now accepts this. The Internet literally <a href="http://www.google.com/trends?q=Nuclear+Power,+Renewable+Energy&amp;ctab=0&amp;geo=all&amp;date=all" title="Nuclear VS. Renewable Energy">buzzes with Nuclear news and
 developments, compared to renewables</a>.</p></p></div><div class=page-footer><hr class=footer-divider><a class=tag href=../tags/politics>#politics</a></div></div><footer class=footer-mobile><div class=social-icons></div><script src=../js/main.min.a7205ef73b078c8daed6fe1b0826e8ba229ffabbb69d299d9446cf41f2c7d8aa.js integrity="sha256-pyBe9zsHjI2u1v4bCCbouiKf+ru2nSmdlEbPQfLH2Ko=" crossorigin=anonymous></script></footer></body></html>
