--- a/ssh-guide/index.html
+++ b/ssh-guide/index.html
@@ -5,7 +5,7 @@
 <a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.a7205ef73b078c8daed6fe1b0826e8ba229ffabbb69d299d9446cf41f2c7d8aa.js integrity="sha256-pyBe9zsHjI2u1v4bCCbouiKf+ru2nSmdlEbPQfLH2Ko=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>SSH Guide</h1><time>November 17, 2008</time><div><p><h2 id=note-this-guide-was-written-for-use-by-my-computer-science-class>**Note: This Guide was written for use by my Computer Science class</h2><p>on Linux (and Mac OS X where noted). I haven&rsquo;t used SSH on Windows; but
 hopefully someone can make sure this guide works also on Windows by
 noting differences). SSH comes with nearly all Linux distros and all Mac
-OS X releases.<br>**</p><p><strong>OS Specific Colours: Linux - Mac OS X - Windows</strong><br>**<br>**<br>**<a href="http://downloads.sourceforge.net/sshwindows/setupssh381-20040709.zip?modtime=1089331200&big_mirror=0">Download SSH For
+OS X releases.<br>**</p><p><strong>OS Specific Colours: Linux - Mac OS X - Windows</strong><br>**<br>**<br>**<a href="http://downloads.sourceforge.net/sshwindows/setupssh381-20040709.zip?modtime=1089331200&amp;big_mirror=0">Download SSH For
 Windows</a><br>**</p><p>***Windows: ****You need to follow README located in Start > All
 Programs > OpenSSH > README to set up password directories and files.
 After that is done; just do Start > Run; type cmd and hit enter to get
