--- a/this-post-is-censored-by-irma/index.html
+++ b/this-post-is-censored-by-irma/index.html
@@ -31,7 +31,7 @@ does this open you up to legal action for any other kinds of material
 which rights holders are protective of (Church of Scientology) ? and
 can you retain common carrier status like An Post; and need warrants
 issued instead of some rights organisation sending you a vague letter
-pretending to represent XY&Z ?<br>We understand the &lsquo;concern&rsquo; about Internet piracy. Artists definitely
+pretending to represent XY&amp;Z ?<br>We understand the &lsquo;concern&rsquo; about Internet piracy. Artists definitely
 need to be paid for their hard work. It is an important issue in this
 day and age, and it must be addressed correctly. Censorship is not the
 answer. It is avoiding the issue. As has always happened in these
