--- a/uk-parliamentary-debate-is-not-pension/index.html
+++ b/uk-parliamentary-debate-is-not-pension/index.html
@@ -30,7 +30,7 @@ Network</a>
 and associated other sources)</p></blockquote><p>I find the whole <a href=http://en.wikipedia.org/wiki/Digital_Rights_Management title="Digital Rights Management">Digital Rights
 Management</a>
 thing very interesting, will the greedy dinosaurs of the recording
-industry win? Or will technologists like <a href="http://video.google.com/videoplay?docid=-1904758034876244745&q=corey+doctorow+drm+microsoft" title="Corey Doctorows DRM Talk at Microsoft">Corey
+industry win? Or will technologists like <a href="http://video.google.com/videoplay?docid=-1904758034876244745&amp;q=corey+doctorow+drm+microsoft" title="Corey Doctorows DRM Talk at Microsoft">Corey
 Doctorow</a>
 or <a href=http://www.apple.com/hotnews/thoughtsonmusic/ title="Steve Jobs ">Steve
 Jobs</a>
