--- a/first-video-blog/index.html
+++ b/first-video-blog/index.html
@@ -6,5 +6,5 @@
 blogging. If I get used to it it may be easier to explain my point of
 view or give reviews! I have liked hiding behind words up until this
 point, so this is a new venture with my iPhone 4.</p><p><a href="http://www.youtube.com/watch?v=PlC6hdErtkA"><img src=http://img.youtube.com/vi/PlC6hdErtkA/0.jpg alt=image>YouTube
-Video</a></p><p>Please don&rsquo;t be too harsh on me!<br>Location:<a href="http://maps.google.com/maps?q=Dublin,%20Ireland&z=10">Dublin,
+Video</a></p><p>Please don&rsquo;t be too harsh on me!<br>Location:<a href="http://maps.google.com/maps?q=Dublin,%20Ireland&amp;z=10">Dublin,
 Ireland</a></p></p></div><div class=page-footer><hr class=footer-divider><a class=tag href=../tags/video>#video</a></div></div><footer class=footer-mobile><div class=social-icons></div><script src=../js/main.min.a7205ef73b078c8daed6fe1b0826e8ba229ffabbb69d299d9446cf41f2c7d8aa.js integrity="sha256-pyBe9zsHjI2u1v4bCCbouiKf+ru2nSmdlEbPQfLH2Ko=" crossorigin=anonymous></script></footer></body></html>
