--- a/honda-bros-motorcycle/index.html
+++ b/honda-bros-motorcycle/index.html
@@ -3,7 +3,7 @@
 <a class="color-link nav-link" href=../archives/>Archives</a>
 <a class="color-link nav-link" href=../tags/>Tags</a>
 <a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.a7205ef73b078c8daed6fe1b0826e8ba229ffabbb69d299d9446cf41f2c7d8aa.js integrity="sha256-pyBe9zsHjI2u1v4bCCbouiKf+ru2nSmdlEbPQfLH2Ko=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>Honda Bros Motorcycle</h1><time>May 24, 2010</time><div><p><p>I recently purchased -
-known as a <a href="http://books.google.com/books?id=O_YDAAAAMBAJ&pg=PT23">cult
+known as a <a href="http://books.google.com/books?id=O_YDAAAAMBAJ&amp;pg=PT23">cult
 motorbike</a> - a
 Honda BROS (known in the US as a HawkGT). It is a 400cc V-Twin 1991
 model, with 33BHP / 24.6Kw out of the factory. That put&rsquo;s it under the
@@ -13,7 +13,7 @@ and experience. I posted about my <a href=../2008/09/yamaha-yq-aerox-best-moped-
 YQ50</a>,
 My <a href=../2009/12/yamaha-majesty-400c-review.html>Yamaha YP125
 (Majesty)</a>
-and now it&rsquo;s a Honda BROS&rsquo; turn!</p><img src=http://farm4.static.flickr.com/3657/5717976681_857e637784.jpg alt="Honda Bros"><p>I just also ordered a <a href="http://www.haynes.co.uk/webapp/wcs/stores/servlet/ProductDisplay?catalogId=10001&storeId=10001&productId=13493&langId=-1">Haynes
+and now it&rsquo;s a Honda BROS&rsquo; turn!</p><img src=http://farm4.static.flickr.com/3657/5717976681_857e637784.jpg alt="Honda Bros"><p>I just also ordered a <a href="http://www.haynes.co.uk/webapp/wcs/stores/servlet/ProductDisplay?catalogId=10001&amp;storeId=10001&amp;productId=13493&amp;langId=-1">Haynes
 Manual</a>
 for the motorcycle and joined <a href=http://www.hawkgtforum.com/>HawkGT
 forums</a>, so I am going to learn a thing or
@@ -58,7 +58,7 @@ still going!</p><p><strong>Essential Links</strong>
 <a href="http://www.youtube.com/watch?v=xx7up9syaEk">Honda Bros Video Review on
 Youtube</a>
 <a href=http://en.wikipedia.org/wiki/Honda_NT650>Wikipedia Article on BROS</a>
-<a href="http://www.haynes.co.uk/webapp/wcs/stores/servlet/ProductDisplay?catalogId=10001&storeId=10001&productId=13493&langId=-1">Haynes
+<a href="http://www.haynes.co.uk/webapp/wcs/stores/servlet/ProductDisplay?catalogId=10001&amp;storeId=10001&amp;productId=13493&amp;langId=-1">Haynes
 Manual</a>
 <a href=http://hawkworks.net/manual/>HawkWorks Service Manual</a>
 <a href=http://homepage.eircom.net/~hondabros/index.html>Bros Servicing
