--- a/threats-to-democracy/index.html
+++ b/threats-to-democracy/index.html
@@ -2,7 +2,7 @@
 <a class="color-link nav-link" href=../contact>Contact</a>
 <a class="color-link nav-link" href=../archives/>Archives</a>
 <a class="color-link nav-link" href=../tags/>Tags</a>
-<a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.a7205ef73b078c8daed6fe1b0826e8ba229ffabbb69d299d9446cf41f2c7d8aa.js integrity="sha256-pyBe9zsHjI2u1v4bCCbouiKf+ru2nSmdlEbPQfLH2Ko=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>Threats to Democracy</h1><time>June 26, 2007</time><div><p><p>After reading about <a href="http://uk.reuters.com/article/entertainmentNews/idUKL253889920070625?feedType=RSS&rpc=451&sp=true">Tom Cruise
+<a class="color-link nav-link" href=../index.xml target=_blank rel=noopener type=application/rss+xml>RSS</a></div><footer class=footer><div class=social-icons></div><script src=../js/main.min.a7205ef73b078c8daed6fe1b0826e8ba229ffabbb69d299d9446cf41f2c7d8aa.js integrity="sha256-pyBe9zsHjI2u1v4bCCbouiKf+ru2nSmdlEbPQfLH2Ko=" crossorigin=anonymous></script><script src=../js/lunr-search.js></script></footer></nav><div id=content class=content-container><h1 class=post-title>Threats to Democracy</h1><time>June 26, 2007</time><div><p><p>After reading about <a href="http://uk.reuters.com/article/entertainmentNews/idUKL253889920070625?feedType=RSS&amp;rpc=451&amp;sp=true">Tom Cruise
 being banned from filming at certain German military sites because of
 his belief in
 Scientology</a>,
