--- a/contact/index.html
+++ b/contact/index.html
@@ -131,18 +131,11 @@
     <div>
         
         <p>
-        <p>My preferred way of reaching out is on <a href="https://mastodon.ie/@dueyfinster">Mastodon</a>/<a href="https://twitter.com/dueyfinster">Twitter</a>. Alternatively you can reach me by email by using my first name at my last name dot org.</p>
-<p>You can also <a href="mailto:dueyfinster@protonmail.com">send me encrypted mail</a> using my <a href="../contact/pgp_public_dueyfinster.txt">pgp key</a>.</p>
+        <p>My preferred way of reaching out is on <a href="https://mastodon.ie/@dueyfinster">Mastodon</a>/<a href="https://twitter.com/dueyfinster">X</a>. Alternatively you can reach me by email by using my first name at my last name dot org.</p>
+<p>You can also [send me encrypted mail][xmail] using my [pgp key][pgp].</p>
 <ul>
 <li><a href="https://www.linkedin.com/in/neilgrogan">Linkedin</a></li>
 <li><a href="https://www.hackerrank.com/dueyfinster">Hackerrank</a></li>
-</ul>
-<h4 id="pgp-info">PGP Info</h4>
-<ul>
-<li>Key ID: 7FOF2D89</li>
-<li>PGP Fingerpint: F12E 451D 87D9 4EE6 AFDF  7F14 B495 8827 7F0F 2D89</li>
-<li>Length: 4096</li>
-<li>Created: 2016-08-21</li>
 </ul>
 
         </p>
