deploy: 797e6c350c04dc27f7d8b4bc38bae5ef345f5522

--- a/uses/index.html
+++ b/uses/index.html
@@ -162,11 +162,11 @@
 <li>Dell Dock</li>
 <li>Macbook Air M2</li>
 <li><a href="https://www.amazon.co.uk/Logitech-Ultrafast-Scrolling-Ergonomic-Customisation/dp/B07W6JG6Z7/">Logitech MX Master 3</a></li>
-<li>Logitech Laptop style keyboard (Mac edition)</li>
-<li>Monitor and Laptop VESA mount arms</li>
-<li>Elgato Streamdeck (I mostly automate Microsoft Teams/HomeAssistant)</li>
+<li><a href="https://www.amazon.co.uk/gp/product/B00B73BZJO/">Logitech Laptop style keyboard (Mac edition)</a></li>
+<li><a href="https://www.amazon.co.uk/gp/product/B08R3MBSKP/">Monitor and Laptop VESA mount arms</a></li>
+<li><a href="https://www.amazon.co.uk/Elgato-Stream-Deck-Controller-customizable/dp/B06W2KLM3S">Elgato Streamdeck</a> (I mostly automate Microsoft Teams/HomeAssistant)</li>
 <li>Unbranded Sit/Stand Desk</li>
-<li>Herman Miller Aeron Chair</li>
+<li><a href="https://usedaeronireland.ie/">Herman Miller Aeron Chair</a></li>
 <li>Dell 4K Web Cam</li>
 <li>Blue Snowball Mic</li>
 </ul>
