deploy: 00ce2426b48b69952fac02b798012a4f100488b2

--- a/uses/index.html
+++ b/uses/index.html
@@ -168,7 +168,7 @@
 <li>Unbranded Sit/Stand Desk</li>
 <li><a href="https://usedaeronireland.ie/">Herman Miller Aeron Chair</a></li>
 <li>Dell 4K Web Cam</li>
-<li>Blue Snowball Mic</li>
+<li><a href="https://www.amazon.co.uk/Blue-Microphones-Snowball-iCE-Microphone/dp/B014PYGTUQ/">Blue Snowball Mic</a></li>
 </ul>
 <h2 id="on-the-go">On the go</h2>
 <p>On my phone (iPhone 15 Pro) I use:</p>
