--- a/uses/index.html
+++ b/uses/index.html
@@ -141,6 +141,16 @@
 <p>For work, I use Microsoft Excel, Powerpoint and Word - I never use these on a personal machine (I use Apple iWork suite on rare occasion).</p>
 <h3 id="backup-strategy">Backup Strategy</h3>
 <p>I host my files on a Synology NAS and back it up to Rsync.net - with mirrors to local USB and cloud sync where needed.</p>
+<h3 id="mobile-setup">Mobile setup</h3>
+<ul>
+<li><a href="https://frame.work">Framework 13 AMD</a> - runs <a href="https://nixos.org">NixOS</a></li>
+</ul>
+<p>On my phone (iPhone 15 Pro) I use:</p>
+<ul>
+<li><a href="https://workingcopy.app">Working Copy</a> for Git</li>
+<li><a href="https://blink.sh">Blink</a> as terminal</li>
+<li><a href="https://mosh.org">mosh</a>  to keep sessions open anywhere</li>
+</ul>
 <h3 id="desk-setup">Desk Setup</h3>
 <p>I have separate work and personal desks in my office.</p>
 <p>Personal Desk:</p>
@@ -158,8 +168,8 @@
 <li>Dell Monitor</li>
 <li>Dell Dock</li>
 <li>Macbook Air M2</li>
+<li><a href="https://www.zenlap.eu/kinesis-advantage-2-360">Kinesis Advantage 360 Pro</a> - <a href="https://github.com/dueyfinster/Adv360-Pro-ZMK">Keymap on Github</a></li>
 <li><a href="https://www.amazon.co.uk/Logitech-Ultrafast-Scrolling-Ergonomic-Customisation/dp/B07W6JG6Z7/">Logitech MX Master 3</a></li>
-<li><a href="https://www.amazon.co.uk/gp/product/B00B73BZJO/">Logitech Laptop style keyboard (Mac edition)</a></li>
 <li><a href="https://www.amazon.co.uk/gp/product/B08R3MBSKP/">Monitor and Laptop VESA mount arms</a></li>
 <li><a href="https://www.amazon.co.uk/Elgato-Stream-Deck-Controller-customizable/dp/B06W2KLM3S">Elgato Streamdeck</a> (I mostly automate Microsoft Teams/HomeAssistant)</li>
 <li>Unbranded Sit/Stand Desk</li>
@@ -167,12 +177,9 @@
 <li>Dell 4K Web Cam</li>
 <li><a href="https://www.amazon.co.uk/Blue-Microphones-Snowball-iCE-Microphone/dp/B014PYGTUQ/">Blue Snowball Mic</a></li>
 </ul>
-<h2 id="on-the-go">On the go</h2>
-<p>On my phone (iPhone 15 Pro) I use:</p>
+<p>In storage:</p>
 <ul>
-<li><a href="https://workingcopy.app">Working Copy</a> for Git</li>
-<li><a href="https://blink.sh">Blink</a> as terminal</li>
-<li><a href="https://mosh.org">mosh</a>  to keep sessions open anywhere</li>
+<li><a href="https://www.amazon.co.uk/gp/product/B00B73BZJO/">Logitech Laptop style keyboard (Mac edition)</a></li>
 </ul>
 <h3 id="other-gear">Other Gear</h3>
 <ul>
