deploy: 851d2bbbb610e4c4c63fef8c2672324de5271f5e

--- a/love-letter-to-irmas-solicitor/index.html
+++ b/love-letter-to-irmas-solicitor/index.html
@@ -158,9 +158,9 @@ plus damages (x10 like they do in their cases) to individuals and companies
 wrongly stressed out by this. I will compile a blog post of all the FUD (Fear,
 Uncertainty and Doubt) that IRMA has spread soon; and a rebuttal of why their
 actions may even increase piracy. One thing is for sure; my analysis will be a
-whole lot cheaper (free) and probably more accurate!
-<strong>Note:</strong> I have taken out names, but the legal firm and the acting solicitor
-can be examined in the letter above ^</p>
+whole lot cheaper (free) and probably more accurate! <strong>Note:</strong> I have taken
+out names, but the legal firm and the acting solicitor can be examined in the
+letter above ^</p>
 </li>
 </ul>
 <blockquote>
