--- a/20-years/index.html
+++ b/20-years/index.html
@@ -141,9 +141,9 @@ interest to 15 year old me at the time. The only thing that could make blogging
 interesting for me: I heard of this mythical new service called &ldquo;Gmail&rdquo;. Gmail
 of course from a company I already thought was cool: Google. Unfortunately for
 me - this new &ldquo;Gmail&rdquo; I heard about a few months before was US only.</p>
-<p>Then the rumours started to fly: Google was opening up Gmail to more users and a
-surefire way to get it? Create a Blogger account - a company that Google
-acquired. So I duly did that snd wrote the <a href="../dueyfinster">first post</a>. If you&rsquo;re
+<p>Then the rumours started to fly: Google was opening up Gmail to more users. What
+was a surefire way to get it? Create a Blogger account - a company that Google
+acquired. So I duly did that and wrote the <a href="../dueyfinster">first post</a>. If you&rsquo;re
 curious - I&rsquo;m now convinced it made exactly and precisely zero difference. What
 eventually got me that coveted gmail account was having different cousins based
 in the United States who could invite me directly. I finally got
