deploy: 17437e0e0ffb94349245260bbe491098009ab729

--- a/uses/index.html
+++ b/uses/index.html
@@ -134,14 +134,13 @@
         <h3 id="editor--terminal">Editor + Terminal</h3>
 <p>For Editor I use <a href="https://code.visualstudio.com">VS Code</a> and
 <a href="https://www.vim.org">Vim</a>/<a href="https://www.neovim.io">Neovim</a>. I also use
-<a href="https://www.gnu.org/emacs">Emacs</a> for the excellent <a href="">org-mode</a>.</p>
-<p>For shell I use <a href="https://www.zsh.org/">ZSH</a> with <a href="https://ohmyz.sh">OhMyZSH</a>
-installed. For terminal I use <a href="https://iterm2.com">iTerm2</a>/Terminal.app but I
-have also tried Alacritty/kitty on occasion.</p>
+<a href="https://www.gnu.org/emacs">Emacs</a> for the excellent <a href="https://orgmode.org/">org-mode</a>.</p>
+<p>For shell I use <a href="https://www.zsh.org/">ZSH</a> with <a href="https://starship.rs/">Starship</a>
+installed. For terminal I use <a href="https://wezfurlong.org/wezterm/index.html">WezTerm</a> but I
+am also trying <a href="https://ghostty.org/">Ghostty</a>.</p>
 <p><a href="https://github.com/dueyfinster/dotfiles">My dotfiles are here</a></p>
 <h3 id="desktop-apps">Desktop Apps</h3>
-<p>For web browser - I usually use Safari - unless the website doesn&rsquo;t work or I
-need better DevTools then I&rsquo;ll use Firefox or Chrome.</p>
+<p>For web browser - I usually use Safari and Firefox.</p>
 <p>For RSS reader I use the excellent <a href="https://reederapp.com">Reeder</a> (mac/iOS).</p>
 <p>For work, I use Microsoft Excel, Powerpoint and Word - I never use these on a
 personal machine (I use Apple iWork suite on rare occasion).</p>
@@ -150,7 +149,7 @@ personal machine (I use Apple iWork suite on rare occasion).</p>
 local USB and cloud sync where needed.</p>
 <h3 id="mobile-setup">Mobile setup</h3>
 <ul>
-<li><a href="https://frame.work">Framework 13 AMD</a> - runs <a href="https://nixos.org">NixOS</a></li>
+<li><a href="https://frame.work">Framework 13 AMD 7040</a> - runs <a href="https://nixos.org">NixOS</a></li>
 </ul>
 <p>On my phone (iPhone 15 Pro) I use:</p>
 <ul>
@@ -159,8 +158,8 @@ local USB and cloud sync where needed.</p>
 <li><a href="https://mosh.org">mosh</a> to keep sessions open anywhere</li>
 </ul>
 <h3 id="desk-setup">Desk Setup</h3>
-<p>I have separate work and personal desks in my office.</p>
-<p>Personal Desk:</p>
+<p>I have separate work and personal desks in my home office.</p>
+<h4 id="personal-desk">Personal Desk:</h4>
 <ul>
 <li><a href="https://support.apple.com/en-ie/111995">5K iMac Pro</a></li>
 <li><a href="https://www.ikea.com/ie/en/p/bekant-desk-sit-stand-white-stained-oak-veneer-white-s19282085/">Ikea Bekant Sit/Stand Desk</a></li>
@@ -169,8 +168,10 @@ local USB and cloud sync where needed.</p>
 <li>Apple Trackpad</li>
 <li>Unbranded office chair</li>
 <li>ErgoTron HX Monitor Arm</li>
+<li><a href="https://www.getdoxie.com/product/doxie-q">Doxie Q</a> for receipt scanning</li>
+<li><a href="https://mydpi.com/products/300v1">mydpi 300v1</a> thermal printer for labels</li>
 </ul>
-<p>Work Desk</p>
+<h4 id="work-desk">Work Desk:</h4>
 <ul>
 <li>Dell Monitor</li>
 <li>Dell Dock</li>
@@ -178,19 +179,27 @@ local USB and cloud sync where needed.</p>
 <li><a href="https://www.zenlap.eu/kinesis-advantage-2-360">Kinesis Advantage 360 Pro</a> -
 <a href="https://github.com/dueyfinster/Adv360-Pro-ZMK">Keymap on Github</a></li>
 <li><a href="https://www.amazon.co.uk/Logitech-Ultrafast-Scrolling-Ergonomic-Customisation/dp/B07W6JG6Z7/">Logitech MX Master 3</a></li>
-<li><a href="https://www.amazon.co.uk/gp/product/B08R3MBSKP/">Monitor and Laptop VESA mount arms</a></li>
-<li><a href="https://www.amazon.co.uk/Elgato-Stream-Deck-Controller-customizable/dp/B06W2KLM3S">Elgato Streamdeck</a>
+<li><a href="https://www.amazon.co.uk/gp/product/B08R3MBSKP/">Monitor and Laptop VESA mount arms</a>
 (I mostly automate Microsoft Teams/HomeAssistant)</li>
 <li>Unbranded Sit/Stand Desk</li>
 <li><a href="https://usedaeronireland.ie/">Herman Miller Aeron Chair</a></li>
 <li>Dell 4K Web Cam</li>
+<li><a href="https://www.amazon.co.uk/Elgato-Stream-Deck-Controller-customizable/dp/B06W2KLM3S">Elgato Stream Deck</a></li>
+<li><a href="https://www.amazon.co.uk/dp/B09PRMCTGB">Elgato Stream Deck Pedal</a></li>
+<li><a href="https://www.amazon.co.uk/dp/B0CH3P9K1X">Elgato Prompter</a> with a <a href="https://www.amazon.co.uk/dp/B0BJL7Q3SR">Elgato FaceCam Pro</a></li>
+<li><a href="https://www.amazon.co.uk/Elgato-Wave-Tap-Mute-Mac/dp/B09738CKKX">Elgato Wave XLR</a> paired with a <a href="https://www.amazon.co.uk/Shure-SM7B-Microphone/dp/B0002E4Z8M">Shure S7MB</a></li>
+</ul>
+<h4 id="in-storage">In storage:</h4>
+<ul>
 <li><a href="https://www.amazon.co.uk/Blue-Microphones-Snowball-iCE-Microphone/dp/B014PYGTUQ/">Blue Snowball Mic</a></li>
 </ul>
-<p>In storage:</p>
+<h4 id="packed-for-travel-to-the-office">Packed for travel to the office:</h4>
 <ul>
 <li><a href="https://www.amazon.co.uk/gp/product/B00B73BZJO/">Logitech Laptop style keyboard (Mac edition)</a></li>
+<li>Dell mouse</li>
+<li><a href="https://www.therooststand.com/">Roost Laptop Stand</a></li>
 </ul>
-<h3 id="other-gear">Other Gear</h3>
+<h4 id="other-gear">Other Gear</h4>
 <ul>
 <li>Headphones I mostly use in the &ldquo;office&rdquo; office and they are Airpods Pro</li>
 </ul>
