deploy: 9ab6440b736d6cb48cf83a819922f5cba8d0b175

--- a/picade/index.html
+++ b/picade/index.html
@@ -148,12 +148,12 @@
 <p>The instructions are very well written and clear. All the parts are well packed. The only parts I felt were fiddly were the plastic hinges for the cabinet (you need to get your hands in to tight spaces to tie down the screws) and the button  order. It&rsquo;s easy to mix up which button is connected where - so with this and installing the joystick/top plate the joystick attaches to I would take your time.</p>
 <p>Frustrations I had:</p>
 <ul>
-<li>Picade is not plug and play - I had various issues controlling sound</li>
+<li><a href="https://retropie.org.uk/">RetroPie</a> (the linux distribution) is not plug and play - I had various issues controlling sound</li>
 <li>Not clear to me how the consoles appear (turns out games working with emulators have file extensions, Picade picks this up and will know to launch .snes with SNES)</li>
-<li>Loading games on was tedious until I installed and shared games directory with <a href="">Samba</a><a href="https://www.samba.org/">https://www.samba.org/</a></li>
+<li>Loading games on was tedious until I installed and shared games directory with <a href="https://www.samba.org/">Samba</a></li>
 <li>Mapping buttons for so many different emulators and systems is a nightmare - I was hoping someone would have just put in sensible defaults!</li>
 </ul>
-<p>I ordered the <a href="https://shop.pimoroni.com/products/picade-plasma-kit-illuminated-arcade-buttons">fancy illuminated buttons</a> after because for me, this is partly about playing and partly about a really nice object to talk about.</p>
+<p>Later, I ordered the <a href="https://shop.pimoroni.com/products/picade-plasma-kit-illuminated-arcade-buttons">fancy illuminated buttons</a> after because for me, this is partly about playing and partly about a really nice object to talk about.</p>
 <p>Overall this was a super fun project and getting to play some great games at the end was rewarding!!</p>
         </p>
     </div>
